--- a/index.html
+++ b/index.html
@@ -9,29 +9,7 @@
 </head>
 <body>
 
-  <div class="third third--red"></div>
-  <div class="third third--yellow"></div>
-  <div class="third third--blue"></div>
-
-  <svg viewBox="0 0 340 340" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <defs>
-        <path d="M49,93 L115,143.723633 L181,93 L181,247 L49,247 L49,93 Z M249.710526,246.985631 L249.710526,247 L195,247 L195,93 L249.710526,93 L249.710526,93.0143691 C250.047216,93.0048088 250.384952,93 250.723684,93 C272.546199,93 290.236842,112.958675 290.236842,137.578947 C290.236842,150.353071 285.474505,161.872289 277.843634,170 C285.474505,178.127711 290.236842,189.646929 290.236842,202.421053 C290.236842,227.041325 272.546199,247 250.723684,247 C250.384952,247 250.047216,246.995191 249.710526,246.985631 Z" id="path-1"></path>
-    </defs>
-    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <g id="Desktop-Copy" transform="translate(-60.000000, -302.000000)">
-            <g id="Group" transform="translate(60.000000, 302.000000)">
-                <circle id="BACKGROUND-Copy-2" fill="#212529" cx="170" cy="170" r="170"></circle>
-                <mask id="mask-2" fill="white">
-                    <use xlink:href="#path-1"></use>
-                </mask>
-                <use id="Combined-Shape-Copy-2" fill="#F1055F" xlink:href="#path-1"></use>
-                <circle id="Oval-Copy-6" fill="#E53269" mask="url(#mask-2)" cx="167" cy="136" r="167"></circle>
-                <circle id="Oval-Copy-5" fill="#FDE24D" mask="url(#mask-2)" cx="259" cy="91" r="182"></circle>
-                <circle id="Oval-Copy-4" fill="#0A98E7" mask="url(#mask-2)" cx="302" cy="32" r="182"></circle>
-            </g>
-        </g>
-    </g>
-  </svg>
+  <img src="icon.png" alt="Mathias Borgmalm" />
   
 </body>
 </html>
