--- a/index.html
+++ b/index.html
@@ -4,12 +4,75 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/base.css">
   <title>Mathias Borgmalm</title>
 </head>
 <body>
 
-  <img src="icon.png" alt="Mathias Borgmalm" />
-  
+  <header class="icon__wrap icon__wrap--start">
+    <img
+      class="icon"
+      src="icons/icon.svg"
+      alt="Mathias Borgmalm"
+    />
+  </header>
+
+  <main class="main">
+    <div class="sections">
+      <article class="section section--intro">
+        <h1 class="section__heading">Intro</h1>
+        <div class="section__text">
+          <p>Hello, my name is Mathias Borgmalm and I'm a frontend developer based in Stockholm, Sweden.</p>
+          <p>I have been working with frontend for over 4,5 years now and really enjoy it still.</p>
+          <p>Also:</p>
+          <ul>
+            <li>CSS is fun to work with and gets a lot of bad rap</li>
+            <li>Not every website needs a framework or build system</li>
+            <li>The most beautiful English word isn't <em>cellar door</em>, it's <em>aviary</em>.</li>
+          </ul>
+        </div>
+      </article>
+      <article class="section section--links">
+        <h2 class="section__heading">
+          Links
+        </h2>
+        <a
+          class="section__link"
+          href="https://github.com/mateboy"
+        >
+        <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" id="github"><title>GitHub logo</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
+          GitHub
+        </a>
+        <a
+          class="section__link"
+          href="https:/linkedin.com/mborgmalm"
+        >
+        <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn logo</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+          LinkedIn
+        </a>
+        <a
+          class="section__link"
+          href="https:/last.fm/user/MeTRoD"
+        >
+        <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Last.fm logo</title><path d="M10.599 17.211l-.881-2.393s-1.433 1.596-3.579 1.596c-1.9 0-3.249-1.652-3.249-4.296 0-3.385 1.708-4.596 3.388-4.596 2.418 0 3.184 1.568 3.845 3.578l.871 2.751c.871 2.672 2.523 4.818 7.285 4.818 3.41 0 5.722-1.045 5.722-3.801 0-2.227-1.276-3.383-3.635-3.935l-1.757-.384c-1.217-.274-1.577-.771-1.577-1.597 0-.936.736-1.487 1.952-1.487 1.323 0 2.028.495 2.147 1.679l2.749-.33c-.225-2.479-1.937-3.494-4.745-3.494-2.479 0-4.897.936-4.897 3.934 0 1.873.902 3.058 3.185 3.605l1.862.443c1.397.33 1.863.916 1.863 1.713 0 1.021-.992 1.441-2.869 1.441-2.779 0-3.936-1.457-4.597-3.469l-.901-2.75c-1.156-3.574-3.004-4.896-6.669-4.896C2.147 5.327 0 7.879 0 12.235c0 4.179 2.147 6.445 6.003 6.445 3.108 0 4.596-1.457 4.596-1.457v-.012z"/></svg>
+          Last.fm
+        </a>
+        <a
+          class="section__link"
+          href="https:/wiki.mathiasborgmalm.com"
+        >
+        <svg xmlns="http://www.w3.org/2000/svg" class="stroke" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><title>Book icon</title></title><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
+          Personal knowledge database
+        </a>
+      </article>
+    </div>
+    <footer>
+      <svg viewBox="0 0 118 75" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <title>MB White</title>
+        <path d="M76.8,73.5 L78.8,75 L56.6,75 L58.7,73.5 L58.7,12.1 L63.9,0 L78.7,0 L76.8,1.4 L76.8,73.5 Z M42.6,48.9 L48.6,40 L40.1,75 L33.3,75 L2.9,1.5 L0.2,0 L22.8,0 L42.6,48.9 Z M18.4,75 L0,75 C0,75 5.6,72.3 9.2,52 C11.4,72.2 18.4,75 18.4,75 Z M117.8,54.9 C117.8,71.7 98.3,75 87.3,75 C90.5,74.5 96.7,71.7 97.4,62 C97.4,62 97.7,58.9 97.7,54.9 C97.7,51 97.4,48 97.4,48 C96.7,38.3 89,35.5 86.3,34.9 C88.9,34.4 93.8,33.1 94.4,24.1 C94.4,24.1 94.7,21.2 94.7,17.8 C94.7,14.4 94.4,11.4 94.4,11.4 C93.9,2.3 88.8,0.4 86.6,0 C101.6,0 112.2,8.5 112.2,17.8 C112.2,27.1 103.5,33.7 91.3,34.7 C103.5,34.7 117.8,41.5 117.8,54.9 Z" id="MB-White"></path>
+      </svg>
+    </footer>
+  </main>
 </body>
 </html>
