--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         </a>
         <a
           class="section__link"
-          href="https:/wiki.mathiasborgmalm.com"
+          href="https:/wiki.mathiasborgmalm.dev"
         >
         <svg xmlns="http://www.w3.org/2000/svg" class="stroke" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><title>Book icon</title></title><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
-          Personal knowledge database
+          Personal wiki
         </a>
       </article>
     </div>
